--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "bad-bank-with-react",
+  "name": "bank-project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\"",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
+    "core-js": "^3.26.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongodb": "^4.10.0"
+    "firebase": "^9.12.1",
+    "firebase-admin": "^11.2.0",
+    "mongodb": "^4.11.0"
   }
 }
