--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "bank-project",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
@@ -13,9 +12,16 @@
   "dependencies": {
     "core-js": "^3.26.0",
     "cors": "^2.8.5",
+    "docker": "^1.0.0",
     "express": "^4.18.2",
     "firebase": "^9.12.1",
     "firebase-admin": "^11.2.0",
-    "mongodb": "^4.11.0"
-  }
+    "mongodb": "^4.11.0",
+    "node": "^14.20.1",
+    "nvm": "^0.0.4"
+  },
+  "devDependencies": {
+    "@babel/helper-compilation-targets": "^7.19.3"
+  },
+  "description": ""
 }
